# CG-TP1-BOIDS

./: .gitignore  CMakeLists.txt  README.md
Source/: Boid.cpp  Boid.h  GoalBoid.cpp  GoalBoid.h  Main.cpp  Math.h  Random.cpp  Random.h  World.cpp  World.h
